--- a/index.qmd
+++ b/index.qmd
@@ -1,13 +1,7 @@
 ---
 title: "blog to follow my learnings"
-listing:
-  contents: posts
-  feed: true
-  sort: "date desc"
-  type: default
-  categories: true
-  sort-ui: false
-  filter-ui: false
-page-layout: full
-title-block-banner: true
 ---
+
+I’m spinning up a Quarto‑powered blog—running it locally, publishing it online, and using it as a living notebook for everything I’m learning across machine learning, data science, AI, and agentic systems. Think of it as a public lab book: part documentation, part exploration, part “let’s see what happens when I push this button.” 
+
+I’m stepping in with curiosity, a stack of experiments, and zero certainty about where this path leads. Which is exactly the point.
