--- a/coffee-blog.qmd
+++ b/coffee-blog.qmd
@@ -11,7 +11,7 @@ listing:
 
 The idea is also to keep it light -- have a break and post something interesting that I stumble upon.
 
-One piece of trivia is that it took me four tries to finally render this online - inspite of having help from C J Hadley.
+One piece of trivia is that it took me four tries to finally render this online - inspite of having help from C J Hadley...
 
 ::: {#blog}
 :::
