--- a/coffee-blog.qmd
+++ b/coffee-blog.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Coffee Blog"
+title: "Wire"
 listing:
   id: coffee-reviews
   contents: coffee-reviews
@@ -9,9 +9,7 @@ listing:
   feed: true
 ---
 
-The idea is also to keep it light -- have a break and post something interesting that I stumble upon.
-
-One piece of trivia is that it took me four tries to finally render this online - inspite of having help from C J Hadley...
+Under Construction
 
 ::: {#blog}
 :::
