Add Math & Stats section and update navigation
Introduced a new 'Math & Stats' section with corresponding navigation links in the Quarto config and site HTML. Added initial content for the section, including a historical roadmap post. Updated project listings, blog categories, and GitHub profile link. Also included a use-case flow diagram in the coffee blog and added a new project under 'Projects'.

--- a/math&stat.qmd
+++ b/math&stat.qmd
@@ -1,10 +1,15 @@
 ---
 listing:
   id: blog
-  contents: projects
+  contents: math&stat
   sort: "date desc"
   type: default
   categories: true
   feed: true
 toc: false
 ---
+
+# Blog
+
+::: {#blog}
+:::
